// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableText can be edited 1`] = `
<div>
  <div
    class="makeStyles-root-35"
  >
    <p
      class="MuiTypography-root makeStyles-text-36 makeStyles-singleline-37 MuiTypography-body1"
    >
      Initial value
    </p>
  </div>
</div>
`;

exports[`EditableText shows the given initial value 1`] = `
<div>
  <div
    class="makeStyles-root-1"
  >
    <p
      class="MuiTypography-root makeStyles-text-2 makeStyles-singleline-3 MuiTypography-body1"
    >
      Initial value
    </p>
  </div>
</div>
`;
